// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<div
  className="ui active dimmer"
>
  <div
    className="ui big text loader"
    data-testid="LoadingMessage"
  >
    Hi 
    Testing Snapshot
  </div>
</div>
`;

exports[`matches snapshot 2 1`] = `
<div
  className="ui active dimmer"
>
  <div
    className="ui big text loader"
    data-testid="LoadingMessage"
  >
    Hi 
    I am Not A Button, So Dont Push Me
  </div>
</div>
`;
